# lmno

./: .gitignore  Earthfile  LICENSE.md  Makefile  README.md  bpt.yaml  dag.py  pyproject.toml
docs/: .gitignore  conf.py  docutils.conf  index.rst  prolog.rst  refpages.py
docs/background/: compile-fast.rst  context.rst  evaluator.rst  everything-else.rst  index.rst  invoke.rst  lang.rst  missing.rst  parser.rst  stdlib.rst  the-name.rst  tokenizer.rst  why.rst
docs/ref/: index.rst
docs/ref-in/: concepts.yaml  const.yaml  cx_str.yaml  error.yaml  index.yaml  invoke.yaml  lex.yaml  schema.yaml  string.yaml
docs/ref/lang/: grammar.rst  index.rst
docs/static/: styles.css
src/: example1.main.cpp
src/lmno/: ast.hpp  ast.test.cpp  const.hpp  const.test.cpp  context.hpp  context.test.cpp  define.hpp  error.hpp  eval.hpp  eval.test.cpp  func_wrap.hpp  invoke.hpp  invoke.test.cpp  lex.hpp  lex.test.cpp  meta.hpp  meta.test.cpp  parse.hpp  parse.test.cpp  rational.hpp  render.hpp  render.test.cpp  stddefs.hpp  stdlib.hpp  strand.hpp  strand.test.cpp  string.hpp  string.test.cpp
src/lmno/concepts/: stateless.hpp  stateless.test.cpp  structural.hpp  structural.test.cpp  typed_constant.hpp
src/lmno/md/: aplib.hpp  cursor.hpp  cursor.test.cpp  mdspan.hpp  range.hpp  range.test.cpp  shape.hpp  shape.test.cpp
src/lmno/stdlib/: algorithm.hpp  arithmetic.hpp  comb.hpp  constants.hpp  logic.hpp  numeric.hpp  ranges.hpp  valences.hpp
tools/: clang-16.yaml  gcc-11.yaml  unmangle.py
